# torch_samples

binary_classify/: main.py  pyproject.toml
multi_classify/: main.py  pyproject.toml
regression/: main.py  pyproject.toml
